--- a/text/flops2016-keynote.bib
+++ b/text/flops2016-keynote.bib
@@ -1,5 +1,31 @@
-%% Created using Papers on Mon, 01 Feb 2016.
+%% Created using Papers on Thu, 04 Feb 2016.
 %% http://papersapp.com/papers/
+
+@webpage{Anonymous:J735rZAA,
+title = {{The Coq Proof Assistant}},
+url = {https://coq.inria.fr/},
+read = {Yes},
+rating = {0},
+date-added = {2016-02-03T12:57:47GMT},
+date-modified = {2016-02-03T12:58:43GMT},
+uri = {\url{papers3://publication/uuid/27BDF9AD-9000-4D2B-AA65-465C0911D145}}
+}
+
+@inproceedings{dijkstra06ruler,
+author = {Dijkstra, Atze and Swierstra, S Doaitse},
+title = {{Ruler: Programming Type Rules}},
+booktitle = {FLOPS'06: Proceedings of the 8th international conference on Functional and Logic Programming},
+year = {2006},
+pages = {30--46},
+publisher = {~Springer-Verlag},
+month = apr,
+rating = {0},
+date-added = {2012-03-26T21:14:43GMT},
+date-modified = {2016-02-03T13:16:40GMT},
+abstract = {Some type systems are first described formally, to be sometimes followed by an implementation. Other type systems are first implemented as language extensions, to be sometimes retrofitted with a formal description. In neither case it is an easy task},
+url = {http://portal.acm.org/citation.cfm?id=2100071.2100077&coll=DL&dl=GUIDE&CFID=74202122&CFTOKEN=33843140},
+uri = {\url{papers3://publication/uuid/7B6F222D-88CC-40A2-8DC9-1EB1826EC938}}
+}
 
 @phdthesis{Keep:2013:NFC:2520988,
 author = {Keep, Andrew W},
@@ -35,6 +61,35 @@ file = {{2003_Laemmel.pdf:/Volumes/Work/Dropbox/Papers/Library.papers3/Articles/
 uri = {\url{papers3://publication/uuid/CC887B73-39AF-4687-8AA1-30DCD2EEB714}}
 }
 
+@phdthesis{middelkoop2012phd-ag-visit,
+author = {Middelkoop, Arie},
+title = {{Inference of Program Properties with Attribute Grammars, Revisited}},
+school = {Utrecht University, Department of Computer Science},
+year = {2012},
+month = mar,
+publisher = {Utrecht University, Department of Computer Science},
+rating = {0},
+date-added = {2014-03-21T08:37:54GMT},
+date-modified = {2016-02-04T10:55:00GMT},
+url = {http://dspace.library.uu.nl/handle/1874/218107},
+local-url = {file://localhost/Volumes/Work/Dropbox/Papers/Library.papers3/Books/2012/Middelkoop/2012_Middelkoop.pdf},
+file = {{2012_Middelkoop.pdf:/Volumes/Work/Dropbox/Papers/Library.papers3/Books/2012/Middelkoop/2012_Middelkoop.pdf:application/pdf}},
+uri = {\url{papers3://publication/uuid/D24DF43E-0CE1-475E-A3B1-9E15DBEF7B15}}
+}
+
+@webpage{Nardelli:4LP6l5xi,
+author = {Nardelli, Francesco Zappa and Sewell, Peter and Owens, Scott},
+title = {{Ott}},
+url = {http://www.cl.cam.ac.uk/~pes20/ott/},
+read = {Yes},
+rating = {0},
+date-added = {2016-02-03T12:43:52GMT},
+date-modified = {2016-02-03T12:45:57GMT},
+local-url = {file://localhost/Volumes/Work/Dropbox/Papers/Library.papers3/Files/E2/E2945D90-97A1-40AD-BE38-C1A185F90F8E.pdf},
+file = {{E2945D90-97A1-40AD-BE38-C1A185F90F8E.pdf:/Volumes/Work/Dropbox/Papers/Library.papers3/Files/E2/E2945D90-97A1-40AD-BE38-C1A185F90F8E.pdf:application/pdf;E2945D90-97A1-40AD-BE38-C1A185F90F8E.pdf:/Volumes/Work/Dropbox/Papers/Library.papers3/Files/E2/E2945D90-97A1-40AD-BE38-C1A185F90F8E.pdf:application/pdf}},
+uri = {\url{papers3://publication/uuid/E0B3FA97-9C62-45DA-81A9-83D834BC5513}}
+}
+
 @article{journals/jfp/SarkarWD05,
 author = {Sarkar, Dipanwita and Waddell, Oscar and Dybvig, R. Kent},
 title = {{Educational Pearl: A Nanopass framework for compiler education.}},
@@ -51,5 +106,56 @@ url = {http://dblp.uni-trier.de/db/journals/jfp/jfp15.html#SarkarWD05},
 local-url = {file://localhost/Volumes/Work/Dropbox/Papers/Library.papers3/Files/68/681D64EC-C8B2-4F08-997D-833CBC47EB30.pdf},
 file = {{681D64EC-C8B2-4F08-997D-833CBC47EB30.pdf:/Volumes/Work/Dropbox/Papers/Library.papers3/Files/68/681D64EC-C8B2-4F08-997D-833CBC47EB30.pdf:application/pdf}},
 uri = {\url{papers3://publication/uuid/92B9EEC0-1360-49BF-B0E0-07465E38318B}}
+}
+
+@article{sewell2010ott-jfp,
+author = {Sewell, Peter and Zappa Nardelli, Francesco and Owens, Scott and Peskine, Gilles and Ridge, Thomas and Sarkar, Susmit and a, Rok Strni s},
+title = {{Ott: Effective Tool Support for the Working Semanticist}},
+journal = {Journal of Functional Programming},
+year = {2010},
+volume = {20},
+number = {1},
+pages = {71--122},
+month = jan,
+publisher = {Cambridge University Press},
+doi = {10.1017/S0956796809990293},
+language = {English},
+rating = {0},
+date-added = {2016-02-03T12:49:07GMT},
+date-modified = {2016-02-03T12:50:25GMT},
+url = {http://journals.cambridge.org/action/displayAbstract?aid=7118840},
+local-url = {file://localhost/Volumes/Work/Dropbox/Papers/Library.papers3/Files/B8/B87A0E2A-F46A-4844-8BB3-43F04B20285B.pdf},
+file = {{B87A0E2A-F46A-4844-8BB3-43F04B20285B.pdf:/Volumes/Work/Dropbox/Papers/Library.papers3/Files/B8/B87A0E2A-F46A-4844-8BB3-43F04B20285B.pdf:application/pdf;B87A0E2A-F46A-4844-8BB3-43F04B20285B.pdf:/Volumes/Work/Dropbox/Papers/Library.papers3/Files/B8/B87A0E2A-F46A-4844-8BB3-43F04B20285B.pdf:application/pdf}},
+uri = {\url{papers3://publication/doi/10.1017/S0956796809990293}}
+}
+
+@inproceedings{sewell07ott-tool-semantic,
+author = {Sewell, Peter and Nardelli, Francesco Zappa and Owens, Scott and Peskine, Gilles and al, et},
+title = {{Ott: effective tool support for the working semanticist}},
+booktitle = {ICFP},
+year = {2007},
+pages = {1--12},
+publisher = {\verb|http://doi.acm.org/10.1145/1291220.1291155|},
+read = {Yes},
+rating = {0},
+date-added = {2012-03-27T10:00:11GMT},
+date-modified = {2016-02-03T12:42:34GMT},
+url = {http://doi.acm.org/10.1145/1291220.1291155},
+local-url = {file://localhost/Volumes/Work/Dropbox/Papers/Library.papers3/Articles/2007/Sewell/2007_Sewell.pdf},
+file = {{2007_Sewell.pdf:/Volumes/Work/Dropbox/Papers/Library.papers3/Articles/2007/Sewell/2007_Sewell.pdf:application/pdf}},
+uri = {\url{papers3://publication/uuid/3F6814C9-BD15-4FB0-8560-2AF2BF2ECD99}}
+}
+
+@inproceedings{WMM10,
+author = {Weirich, Stephanie and Owens, Scott and Sewell, Peter and Zappa Nardelli, Francesco},
+title = {{Ott or Nott}},
+booktitle = {5th ACM SIGPLAN Workshop on Mechanizing Metatheory},
+year = {2010},
+month = sep,
+annote = {Abstract},
+rating = {0},
+date-added = {2016-02-03T12:49:07GMT},
+date-modified = {2016-02-03T12:49:58GMT},
+uri = {\url{papers3://publication/uuid/28532006-633A-46CB-B65E-06FB152A202C}}
 }
 
