--- a/text/flops2016-keynote.bib
+++ b/text/flops2016-keynote.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Thu, 04 Feb 2016.
+%% Created using Papers on Thu, 11 Feb 2016.
 %% http://papersapp.com/papers/
 
 @webpage{Anonymous:J735rZAA,
@@ -25,6 +25,21 @@ date-modified = {2016-02-03T13:16:40GMT},
 abstract = {Some type systems are first described formally, to be sometimes followed by an implementation. Other type systems are first implemented as language extensions, to be sometimes retrofitted with a formal description. In neither case it is an easy task},
 url = {http://portal.acm.org/citation.cfm?id=2100071.2100077&coll=DL&dl=GUIDE&CFID=74202122&CFTOKEN=33843140},
 uri = {\url{papers3://publication/uuid/7B6F222D-88CC-40A2-8DC9-1EB1826EC938}}
+}
+
+@phdthesis{jones94phd-qual-types,
+author = {Jones, Mark P.},
+title = {{Qualified Types, Theory and Practice}},
+school = {Cambridge Univ. Press},
+year = {1994},
+publisher = {Cambridge Univ. Press},
+rating = {0},
+date-added = {2012-03-27T10:00:01GMT},
+date-modified = {2016-02-11T11:58:33GMT},
+url = {http://www.cs.ox.ac.uk/files/3432/PRG106.pdf},
+local-url = {file://localhost/Volumes/Work/Dropbox/Papers/Library.papers3/Files/Jones-1994-Qualified_Types_Theory_and_Practice.pdf},
+file = {{Jones-1994-Qualified_Types_Theory_and_Practice.pdf:/Volumes/Work/Dropbox/Papers/Library.papers3/Files/Jones-1994-Qualified_Types_Theory_and_Practice.pdf:application/pdf}},
+uri = {\url{papers3://publication/uuid/AC2A68DC-0B78-47A5-8F63-D5C4F00F2A37}}
 }
 
 @phdthesis{Keep:2013:NFC:2520988,
@@ -68,6 +83,7 @@ school = {Utrecht University, Department of Computer Science},
 year = {2012},
 month = mar,
 publisher = {Utrecht University, Department of Computer Science},
+read = {Yes},
 rating = {0},
 date-added = {2014-03-21T08:37:54GMT},
 date-modified = {2016-02-04T10:55:00GMT},
@@ -144,6 +160,18 @@ url = {http://doi.acm.org/10.1145/1291220.1291155},
 local-url = {file://localhost/Volumes/Work/Dropbox/Papers/Library.papers3/Articles/2007/Sewell/2007_Sewell.pdf},
 file = {{2007_Sewell.pdf:/Volumes/Work/Dropbox/Papers/Library.papers3/Articles/2007/Sewell/2007_Sewell.pdf:application/pdf}},
 uri = {\url{papers3://publication/uuid/3F6814C9-BD15-4FB0-8560-2AF2BF2ECD99}}
+}
+
+@techreport{RUUCS8614,
+author = {Walsteijn, M J and Kuiper, Matthijs F},
+title = {{Attribute grammars in Prolog}},
+year = {1986},
+publisher = {Department of Information and Computing Sciences, Utrecht University},
+keywords = {attribute grammars},
+rating = {0},
+date-added = {2016-02-09T17:36:54GMT},
+date-modified = {2016-02-09T17:37:43GMT},
+uri = {\url{papers3://publication/uuid/A6B9F882-A487-4E3E-B183-9C3B69C45A6A}}
 }
 
 @inproceedings{WMM10,
