--- a/text/flops2016-keynote.bib
+++ b/text/flops2016-keynote.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Thu, 11 Feb 2016.
+%% Created using Papers on Wed, 17 Feb 2016.
 %% http://papersapp.com/papers/
 
 @webpage{Anonymous:J735rZAA,
@@ -9,6 +9,27 @@ rating = {0},
 date-added = {2016-02-03T12:57:47GMT},
 date-modified = {2016-02-03T12:58:43GMT},
 uri = {\url{papers3://publication/uuid/27BDF9AD-9000-4D2B-AA65-465C0911D145}}
+}
+
+@incollection{Churchill:2015ey,
+author = {Churchill, Martin and Mosses, Peter D and Sculthorpe, Neil and Torrini, Paolo},
+title = {{Reusable Components of Semantic Specifications}},
+booktitle = {Transactions on Aspect-Oriented Software Development XII},
+year = {2015},
+pages = {132--179},
+publisher = {Springer Berlin Heidelberg},
+address = {Berlin, Heidelberg},
+doi = {10.1007/978-3-662-46734-3_4},
+isbn = {978-3-662-46733-6},
+language = {English},
+read = {Yes},
+rating = {0},
+date-added = {2016-02-16T13:52:48GMT},
+date-modified = {2016-02-17T11:58:49GMT},
+url = {http://link.springer.com/chapter/10.1007/978-3-662-46734-3_4/fulltext.html},
+local-url = {file://localhost/Volumes/Work/Dropbox/Papers/Library.papers3/Files/8F/8F29E874-83F0-48FA-947B-CE798CF52529.pdf},
+file = {{8F29E874-83F0-48FA-947B-CE798CF52529.pdf:/Volumes/Work/Dropbox/Papers/Library.papers3/Files/8F/8F29E874-83F0-48FA-947B-CE798CF52529.pdf:application/pdf;8F29E874-83F0-48FA-947B-CE798CF52529.pdf:/Volumes/Work/Dropbox/Papers/Library.papers3/Files/8F/8F29E874-83F0-48FA-947B-CE798CF52529.pdf:application/pdf}},
+uri = {\url{papers3://publication/doi/10.1007/978-3-662-46734-3_4}}
 }
 
 @inproceedings{dijkstra06ruler,
@@ -74,6 +95,20 @@ url = {http://doi.acm.org/10.1145/604174.604179},
 local-url = {file://localhost/Volumes/Work/Dropbox/Papers/Library.papers3/Articles/2003/Laemmel/2003_Laemmel.pdf},
 file = {{2003_Laemmel.pdf:/Volumes/Work/Dropbox/Papers/Library.papers3/Articles/2003/Laemmel/2003_Laemmel.pdf:application/pdf}},
 uri = {\url{papers3://publication/uuid/CC887B73-39AF-4687-8AA1-30DCD2EEB714}}
+}
+
+@techreport{levin99tinkertype,
+author = {Levin, Michael Y. and Pierce, Benjamin C.},
+title = {{TinkerType: A Language for Playing with Formal Systems}},
+year = {1999},
+publisher = {\verb|http://www.cis.upenn.edu/{\textasciitilde}milevin/tt.html|},
+rating = {0},
+date-added = {2012-03-27T10:00:07GMT},
+date-modified = {2016-02-17T11:54:42GMT},
+url = {http://www.cis.upenn.edu/~milevin/tt.html},
+local-url = {file://localhost/Volumes/Work/Dropbox/Papers/Library.papers3/Reports/1999/Levin/1999_Levin.pdf},
+file = {{1999_Levin.pdf:/Volumes/Work/Dropbox/Papers/Library.papers3/Reports/1999/Levin/1999_Levin.pdf:application/pdf}},
+uri = {\url{papers3://publication/uuid/DBCC9B84-EFBA-4AE2-9193-6270305E2975}}
 }
 
 @phdthesis{middelkoop2012phd-ag-visit,
@@ -160,6 +195,20 @@ url = {http://doi.acm.org/10.1145/1291220.1291155},
 local-url = {file://localhost/Volumes/Work/Dropbox/Papers/Library.papers3/Articles/2007/Sewell/2007_Sewell.pdf},
 file = {{2007_Sewell.pdf:/Volumes/Work/Dropbox/Papers/Library.papers3/Articles/2007/Sewell/2007_Sewell.pdf:application/pdf}},
 uri = {\url{papers3://publication/uuid/3F6814C9-BD15-4FB0-8560-2AF2BF2ECD99}}
+}
+
+@webpage{Wadler:AR2HUucS,
+author = {Wadler, Philip L},
+title = {{The Expression Problem}},
+year = {1998},
+month = nov,
+url = {http://homepages.inf.ed.ac.uk/wadler/papers/expression/expression.txt},
+keywords = {Expression Problem},
+read = {Yes},
+rating = {0},
+date-added = {2015-09-03T14:02:17GMT},
+date-modified = {2016-02-17T15:29:19GMT},
+uri = {\url{papers3://publication/uuid/011D8752-E712-45C9-8442-5A844EA1982D}}
 }
 
 @techreport{RUUCS8614,
