first 'final' flops keynote version

--- a/text/flops2016-keynote.bib
+++ b/text/flops2016-keynote.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Wed, 17 Feb 2016.
+%% Created using Papers on Fri, 19 Feb 2016.
 %% http://papersapp.com/papers/
 
 @webpage{Anonymous:J735rZAA,
@@ -9,6 +9,38 @@ rating = {0},
 date-added = {2016-02-03T12:57:47GMT},
 date-modified = {2016-02-03T12:58:43GMT},
 uri = {\url{papers3://publication/uuid/27BDF9AD-9000-4D2B-AA65-465C0911D145}}
+}
+
+@webpage{Anonymous:t9Gd69Tm,
+title = {{LDTA 2011 tool challenge description and problem set}},
+year = {2011},
+url = {http://ldta.info/tool.html},
+read = {Yes},
+rating = {0},
+date-added = {2016-02-19T07:52:43GMT},
+date-modified = {2016-02-19T07:55:09GMT},
+uri = {\url{papers3://publication/uuid/B7D19DEB-D4E6-4158-8DA3-E06A5BB54DEC}}
+}
+
+@article{bransen2015phd-ag-incr,
+author = {Bransen, J},
+title = {{On the Incremental Evaluation of Higher-Order Attribute Grammars}},
+journal = {IPA Dissertation Series},
+year = {2015},
+volume = {2015},
+pages = {1--194},
+publisher = {Utrecht University},
+keywords = {attribute grammars, incremental computation, incremental evaluation, Incrementality},
+isbn = {10-1874-313166},
+language = {English},
+rating = {0},
+date-added = {2016-02-19T11:58:38GMT},
+date-modified = {2016-02-19T12:00:53GMT},
+abstract = {Compilers, amongst other programs, often work with data that (slowly) changes over time. When the changes between subsequent runs of the compiler are small, one would hope the compiler to incrementally update its results, resulting in much lower running time. However, the manual construction of an incremental compiler is hard and error prone and therefore usually not an option.  Attribute grammars provide an attractive way of constructing compilers, as they are compositional in nature and allow for aspect oriented programming. This thesis describes the automatic generation of incremental attribute grammar evaluators, with the purpose of (semi-)automatically generating an incremental compiler from the regular attribute grammar definition. In particular this approach supports incremental evaluation of higher order attributes, a well known extension to the classical attribute grammars that is used in many ways in compiler construction, for example to model different compiler phases.},
+url = {http://dspace.library.uu.nl/handle/1874/313166},
+local-url = {file://localhost/Volumes/Work/Dropbox/Papers/Library.papers3/Files/E4/E490D383-4E41-4864-A31C-11129D76C6AB.pdf},
+file = {{E490D383-4E41-4864-A31C-11129D76C6AB.pdf:/Volumes/Work/Dropbox/Papers/Library.papers3/Files/E4/E490D383-4E41-4864-A31C-11129D76C6AB.pdf:application/pdf;E490D383-4E41-4864-A31C-11129D76C6AB.pdf:/Volumes/Work/Dropbox/Papers/Library.papers3/Files/E4/E490D383-4E41-4864-A31C-11129D76C6AB.pdf:application/pdf}},
+uri = {\url{papers3://publication/uuid/8252A346-8D93-4D17-816A-8FB7E206FA34}}
 }
 
 @incollection{Churchill:2015ey,
@@ -197,6 +229,22 @@ file = {{2007_Sewell.pdf:/Volumes/Work/Dropbox/Papers/Library.papers3/Articles/2
 uri = {\url{papers3://publication/uuid/3F6814C9-BD15-4FB0-8560-2AF2BF2ECD99}}
 }
 
+@phdthesis{Viera:2013uo,
+author = {Viera, Marcos},
+title = {{First Class Syntax, Semantics, and Their Composition}},
+school = {Universiteit Utrecht, Department of Information and Computing Sciences},
+year = {2013},
+month = mar,
+publisher = {Universiteit Utrecht, Department of Information and Computing Sciences},
+read = {Yes},
+rating = {0},
+date-added = {2014-05-28T07:23:25GMT},
+date-modified = {2016-02-19T07:54:49GMT},
+local-url = {file://localhost/Volumes/Work/Dropbox/Papers/Library.papers3/Books/2013/Viera/2013_Viera.pdf},
+file = {{2013_Viera.pdf:/Volumes/Work/Dropbox/Papers/Library.papers3/Books/2013/Viera/2013_Viera.pdf:application/pdf}},
+uri = {\url{papers3://publication/uuid/BF7729A0-E65C-4B99-A23E-978F1BBB9614}}
+}
+
 @webpage{Wadler:AR2HUucS,
 author = {Wadler, Philip L},
 title = {{The Expression Problem}},
@@ -207,7 +255,7 @@ keywords = {Expression Problem},
 read = {Yes},
 rating = {0},
 date-added = {2015-09-03T14:02:17GMT},
-date-modified = {2016-02-17T15:29:19GMT},
+date-modified = {2016-02-19T07:37:27GMT},
 uri = {\url{papers3://publication/uuid/011D8752-E712-45C9-8442-5A844EA1982D}}
 }
 
