reaching more or less final version of flops keynote

--- a/text/flops2016-keynote.bib
+++ b/text/flops2016-keynote.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Fri, 19 Feb 2016.
+%% Created using Papers on Mon, 29 Feb 2016.
 %% http://papersapp.com/papers/
 
 @webpage{Anonymous:J735rZAA,
@@ -23,7 +23,7 @@ uri = {\url{papers3://publication/uuid/B7D19DEB-D4E6-4158-8DA3-E06A5BB54DEC}}
 }
 
 @article{bransen2015phd-ag-incr,
-author = {Bransen, J},
+author = {Bransen, Jeroen},
 title = {{On the Incremental Evaluation of Higher-Order Attribute Grammars}},
 journal = {IPA Dissertation Series},
 year = {2015},
@@ -35,7 +35,7 @@ isbn = {10-1874-313166},
 language = {English},
 rating = {0},
 date-added = {2016-02-19T11:58:38GMT},
-date-modified = {2016-02-19T12:00:53GMT},
+date-modified = {2016-02-25T12:38:02GMT},
 abstract = {Compilers, amongst other programs, often work with data that (slowly) changes over time. When the changes between subsequent runs of the compiler are small, one would hope the compiler to incrementally update its results, resulting in much lower running time. However, the manual construction of an incremental compiler is hard and error prone and therefore usually not an option.  Attribute grammars provide an attractive way of constructing compilers, as they are compositional in nature and allow for aspect oriented programming. This thesis describes the automatic generation of incremental attribute grammar evaluators, with the purpose of (semi-)automatically generating an incremental compiler from the regular attribute grammar definition. In particular this approach supports incremental evaluation of higher order attributes, a well known extension to the classical attribute grammars that is used in many ways in compiler construction, for example to model different compiler phases.},
 url = {http://dspace.library.uu.nl/handle/1874/313166},
 local-url = {file://localhost/Volumes/Work/Dropbox/Papers/Library.papers3/Files/E4/E490D383-4E41-4864-A31C-11129D76C6AB.pdf},
@@ -64,6 +64,34 @@ file = {{8F29E874-83F0-48FA-947B-CE798CF52529.pdf:/Volumes/Work/Dropbox/Papers/L
 uri = {\url{papers3://publication/doi/10.1007/978-3-662-46734-3_4}}
 }
 
+@techreport{UUCS2008027,
+author = {Dijkstra, Atze and Middelkoop, Arie and Swierstra, S Doaitse},
+title = {{Efficient Functional Unification and Substitution}},
+year = {2008},
+publisher = {Department of Information and Computing Sciences, Utrecht University},
+rating = {0},
+date-added = {2016-01-21T21:44:17GMT},
+date-modified = {2016-02-29T09:31:08GMT},
+url = {http://www.cs.uu.nl/research/techreps/UU-CS-2008-027.html},
+local-url = {file://localhost/Volumes/Work/Dropbox/Papers/Library.papers3/Files/86/864A7658-B82C-4014-9E1B-60B508A95335.pdf},
+file = {{864A7658-B82C-4014-9E1B-60B508A95335.pdf:/Volumes/Work/Dropbox/Papers/Library.papers3/Files/86/864A7658-B82C-4014-9E1B-60B508A95335.pdf:application/pdf;864A7658-B82C-4014-9E1B-60B508A95335.pdf:/Volumes/Work/Dropbox/Papers/Library.papers3/Files/86/864A7658-B82C-4014-9E1B-60B508A95335.pdf:application/pdf}},
+uri = {\url{papers3://publication/uuid/24D707FB-A804-4049-B579-E1CDB5AF26B2}}
+}
+
+@article{Dijkstra:2007vm,
+author = {Dijkstra, Atze and Geest, Gerrit van den and Heeren, Bastiaan and Swierstra, S Doaitse},
+title = {{\emph{Modelling Scoped Instances with Constraint Handling Rules}}},
+year = {2007},
+read = {Yes},
+rating = {0},
+date-added = {2016-01-21T21:37:00GMT},
+date-modified = {2016-02-29T09:30:54GMT},
+url = {http://foswiki.cs.uu.nl/foswiki/bin/view/Ehc/ModellingScopedInstancesWithConstraintHandlingRules},
+local-url = {file://localhost/Volumes/Work/Dropbox/Papers/Library.papers3/Files/9D/9D5CCA4B-AC3C-4C18-8AE4-289F162CB330.pdf},
+file = {{9D5CCA4B-AC3C-4C18-8AE4-289F162CB330.pdf:/Volumes/Work/Dropbox/Papers/Library.papers3/Files/9D/9D5CCA4B-AC3C-4C18-8AE4-289F162CB330.pdf:application/pdf;9D5CCA4B-AC3C-4C18-8AE4-289F162CB330.pdf:/Volumes/Work/Dropbox/Papers/Library.papers3/Files/9D/9D5CCA4B-AC3C-4C18-8AE4-289F162CB330.pdf:application/pdf}},
+uri = {\url{papers3://publication/uuid/4A2E952E-2BCA-48F5-B68A-2B9127EDFB9F}}
+}
+
 @inproceedings{dijkstra06ruler,
 author = {Dijkstra, Atze and Swierstra, S Doaitse},
 title = {{Ruler: Programming Type Rules}},
@@ -78,6 +106,23 @@ date-modified = {2016-02-03T13:16:40GMT},
 abstract = {Some type systems are first described formally, to be sometimes followed by an implementation. Other type systems are first implemented as language extensions, to be sometimes retrofitted with a formal description. In neither case it is an easy task},
 url = {http://portal.acm.org/citation.cfm?id=2100071.2100077&coll=DL&dl=GUIDE&CFID=74202122&CFTOKEN=33843140},
 uri = {\url{papers3://publication/uuid/7B6F222D-88CC-40A2-8DC9-1EB1826EC938}}
+}
+
+@mastersthesis{geest07cnstr-tycls-ext,
+author = {Geest, Gerrit van den},
+title = {{Constraints for Type Class Extensions}},
+school = {Universiteit Utrecht, Department of Information and Computing Sciences},
+year = {2007},
+publisher = {Universiteit Utrecht, Department of Information and Computing Sciences},
+keywords = {UHC cited},
+read = {Yes},
+rating = {0},
+date-added = {2012-03-27T10:00:03GMT},
+date-modified = {2016-02-29T09:30:54GMT},
+url = {http://www.open.ou.nl/bhr/vandengeest07thesis.pdf},
+local-url = {file://localhost/Volumes/Work/Dropbox/Papers/Library.papers3/Files/Geest-2007-Constraints_for_Type_Class_Extensions.pdf},
+file = {{Geest-2007-Constraints_for_Type_Class_Extensions.pdf:/Volumes/Work/Dropbox/Papers/Library.papers3/Files/Geest-2007-Constraints_for_Type_Class_Extensions.pdf:application/pdf}},
+uri = {\url{papers3://publication/uuid/4BB9556E-DA44-45A3-9329-BFF57A10FB11}}
 }
 
 @phdthesis{jones94phd-qual-types,
