--- a/text/flops2016-keynote.bib
+++ b/text/flops2016-keynote.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Mon, 29 Feb 2016.
+%% Created using Papers on Fri, 04 Mar 2016.
 %% http://papersapp.com/papers/
 
 @webpage{Anonymous:J735rZAA,
@@ -106,6 +106,20 @@ date-modified = {2016-02-03T13:16:40GMT},
 abstract = {Some type systems are first described formally, to be sometimes followed by an implementation. Other type systems are first implemented as language extensions, to be sometimes retrofitted with a formal description. In neither case it is an easy task},
 url = {http://portal.acm.org/citation.cfm?id=2100071.2100077&coll=DL&dl=GUIDE&CFID=74202122&CFTOKEN=33843140},
 uri = {\url{papers3://publication/uuid/7B6F222D-88CC-40A2-8DC9-1EB1826EC938}}
+}
+
+@techreport{dreyer2005phd-ml-nodule,
+author = {Dreyer, Derek},
+title = {{\emph{Understanding and Evolving the ML Module System}}},
+year = {2005},
+number = {CMU-CS-05-131},
+month = may,
+rating = {0},
+date-added = {2016-03-04T23:04:22GMT},
+date-modified = {2016-03-04T23:06:55GMT},
+local-url = {file://localhost/Volumes/Work/Dropbox/Papers/Library.papers3/Files/37/3768AF8B-EE1C-4B11-B04B-19A0740895A4.pdf},
+file = {{3768AF8B-EE1C-4B11-B04B-19A0740895A4.pdf:/Volumes/Work/Dropbox/Papers/Library.papers3/Files/37/3768AF8B-EE1C-4B11-B04B-19A0740895A4.pdf:application/pdf}},
+uri = {\url{papers3://publication/uuid/12F31D6A-2FB3-48F0-9D8F-8F7AF4CCB907}}
 }
 
 @mastersthesis{geest07cnstr-tycls-ext,
@@ -312,7 +326,9 @@ publisher = {Department of Information and Computing Sciences, Utrecht Universit
 keywords = {attribute grammars},
 rating = {0},
 date-added = {2016-02-09T17:36:54GMT},
-date-modified = {2016-02-09T17:37:43GMT},
+date-modified = {2016-03-04T05:16:53GMT},
+local-url = {file://localhost/Volumes/Work/Dropbox/Papers/Library.papers3/Files/18/187F7DCD-2FBB-47C2-B18C-296B4BDF148D.pdf},
+file = {{187F7DCD-2FBB-47C2-B18C-296B4BDF148D.pdf:/Volumes/Work/Dropbox/Papers/Library.papers3/Files/18/187F7DCD-2FBB-47C2-B18C-296B4BDF148D.pdf:application/pdf}},
 uri = {\url{papers3://publication/uuid/A6B9F882-A487-4E3E-B183-9C3B69C45A6A}}
 }
 
